# fastapi-uv-template

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
{{ cookiecutter.project_slug }}/api/v1/items/: services.py  views.py
{{ cookiecutter.project_slug }}/config/: settings.py
{{ cookiecutter.project_slug }}/database/: core.py
{{ cookiecutter.project_slug }}/database/models/: item.py
{{ cookiecutter.project_slug }}/schemas/: item.py
{{ cookiecutter.project_slug }}/tests/: conftest.py
{{ cookiecutter.project_slug }}/tests/api/v1/items/: test_item_service.py  test_items.py
